--- a/src/index.css
+++ b/src/index.css
@@ -6,15 +6,13 @@ body {
   margin: 0;
   --pressStart2Play: "Press Start 2P", cursive;
   font-family: "Varela Round", sans-serif;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+
+main {
+  max-width: 900px;
   margin: auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+a {
+  text-decoration: none;
 }
