--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -3,7 +3,7 @@ header {
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.3);
   display: flex;
   justify-content: space-between;
-  padding: 0 50px;
+  padding: 0 10px;
   background-color: white;
   position: relative;
   z-index: 999;
@@ -24,7 +24,7 @@ header {
   font-family: "Bangers", cursive;
   font-size: 36px;
   color: #ffc700;
-  -webkit-text-stroke: 1px #0094ff;
+  -webkit-text-stroke: 0.1px #0094ff;
   font-style: italic;
   margin-bottom: 0;
 }
@@ -41,11 +41,20 @@ header {
 }
 
 .amount-badge {
-  /* width: 14px;
-  height: 14px; */
+  min-width: 20px;
+  min-height: 20px;
   text-align: center;
   color: #ffc700;
   background: #0094ff;
-  border-radius: 50%;
+  border-radius: 100%;
   padding: 3px;
+}
+
+@media screen and (min-width: 500px) {
+  header {
+    padding: 0 50px;
+  }
+  .logo-text {
+    font-size: 50px;
+  }
 }
