--- a/src/components/ItemAdvertise.module.css
+++ b/src/components/ItemAdvertise.module.css
@@ -9,4 +9,11 @@
   padding-top: 50px;
   margin-top: 0;
   margin-left: 35px;
+  font-size: 20px;
+}
+
+@media screen and (min-width: 500px) {
+  .advertisement-text {
+    font-size: 24px;
+  }
 }
