--- a/src/index.css
+++ b/src/index.css
@@ -18,14 +18,21 @@ body {
   --pressStart2Play: "Press Start 2P", cursive;
 }
 
+a {
+  text-decoration: none;
+}
+
 main {
   max-width: 900px;
   margin: auto;
   background-color: white;
   box-shadow: 0px 0px 16px 0px rgba(100, 100, 100, 0.5);
-  padding: 40px;
+  padding: 10px;
+  min-height: 75vh;
 }
 
-a {
-  text-decoration: none;
+@media screen and (min-width: 500px) {
+  main {
+    padding: 40px;
+  }
 }
