--- a/src/pages/DetailPage.module.css
+++ b/src/pages/DetailPage.module.css
@@ -6,13 +6,20 @@
   margin: auto;
 }
 
+.name {
+  margin-top: 30px;
+  text-transform: capitalize;
+  font-family: var(--pressStart2Play);
+  font-size: 25px;
+  color: #505050;
+}
+
 .image {
   height: 202px;
 }
 
 .detail-container {
   font-size: 18px;
-  /* line-height: 22px; */
   color: #505050;
 }
 
@@ -35,8 +42,8 @@
   border-radius: 6px;
   border: 3px solid transparent;
   cursor: pointer;
-  color: rgb(128, 128, 128);
+  color: rgb(85, 85, 85);
   font-size: 18px;
   font-weight: 600;
-  mix-blend-mode: difference;
+  margin-bottom: 10px;
 }
