--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -48,6 +48,11 @@ header {
   background: #0094ff;
   border-radius: 100%;
   padding: 3px;
+  transition: transform 0.1s;
+}
+
+.bopp-animation {
+  transform: scale(1.2);
 }
 
 @media screen and (min-width: 500px) {
