--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,12 +1,17 @@
 header {
   -webkit-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.3);
-  display: flex;
-  justify-content: space-between;
-  padding: 0 10px;
   background-color: white;
   position: relative;
   z-index: 999;
+}
+
+.container {
+  max-width: 900px;
+  padding: 0 10px;
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
 }
 
 .logo-container {
@@ -56,7 +61,7 @@ header {
 }
 
 @media screen and (min-width: 500px) {
-  header {
+  .container {
     padding: 0 50px;
   }
   .logo-text {
